force-app/main/default/objects/System_Log__c/System_Log__c.object-meta.xml
<CustomObject>
    <label>System Logs</label>
    <nameField>
        <displayFormat>SLS-{00000}</displayFormat>
        <label>System Logs	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>