force-app/main/default/objects/System_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete Receipt</fullName>
            </value>
            <value>
                <fullName>Reverse Apportionment</fullName>
            </value>
            <value>
                <fullName>Delete Demand</fullName>
            </value>
            <value>
                <fullName>Reverse Demand</fullName>
            </value>
            <value>
                <fullName>Receipt Amount Change</fullName>
            </value>
            <value>
                <fullName>Booking Cancellation</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>