force-app/main/default/objects/System_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>